Bugfix: #2
Bugfix: #2: MOCKUP: Page new-places: Info bubble overlaps description of
place

--- a/p05-integration/10-mockup/css/veganguide.css
+++ b/p05-integration/10-mockup/css/veganguide.css
@@ -5,11 +5,11 @@
  */
 
 /* Date bubble */
-#new-places span.ui-li-count {
+#new span.ui-li-count {
 	top: 30px; /* shift to same height as the title of the new place */
 }
 /* Description */
-#new-places p {
+#new p {
 	white-space: normal; /* show full text */
 }
 
